--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,15 @@
     "python.testing.unittestArgs": [
         "-v",
         "-s",
-        ".",
+        "./CS projects",
         "-p",
         "test_*.py"
     ],
-    "python.testing.pytestEnabled": false,
-    "python.testing.unittestEnabled": true
+    "python.testing.pytestEnabled": true,
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestArgs": [
+        ".",
+        "-m",
+        "CS projects"
+    ]
 }
